actual minizinc interface work (missing include)